examples/test/testpolicy7349.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7349
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key36: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value19
          key22: value14
      podSelector:
        matchLabels:
          key21: value42
          key4: value45
